feat: implement TAB inline completion with multi-line fix
Backend:
- Add POST /api/agent/complete SSE endpoint (CompletionController + CompletionService)
- CompletionService uses fast model chain independent from chat (deepseek.fast-*)
- JSON-encode tokens in SSE transport to preserve \n/\t through data: lines

Plugin:
- Add RikkiInlineCompletionProvider (DebouncedInlineCompletionProvider, 350ms debounce)
- Add CompletionSettings for endpoint/enable config via JVM props
- Buffer all tokens before emitting → ghost text appears all-at-once (not streaming)
- unescapeJsonString decodes JSON-encoded tokens to restore newlines and indentation
- Register inline.completion.provider in plugin.xml

UI / security fixes:
- ChatPanel: cap input scroll height to 160px; immediate approval state on command confirm
- BashRiskAssessor: fix compound token splitting and shallow workspace root bypass
- MarkdownUtils: add explicit h1-h6 CSS font-size rules for correct heading scale
- Prompts: rename agent identity OpenCode → Rikki across all provider prompt files
- Prompts: strengthen no-file-creation rule (no md/README files for conversational output)

--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -8,5 +8,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow id="RIKKI" anchor="right" factoryClass="com.zzf.codeagent.idea.ChatToolWindowFactory"/>
         <notificationGroup id="RIKKI" displayType="LOG_ONLY"/>
+        <inline.completion.provider
+            implementation="com.zzf.codeagent.idea.completion.RikkiInlineCompletionProvider"
+            order="last"/>
     </extensions>
 </idea-plugin>
